tests/ui/type/pattern_types/signed_ranges.stderr
error[E0600]: cannot apply unary operator `-` to type `u32`
  --> $DIR/signed_ranges.rs:6:34
   |
LL | type Sign = pattern_type!(u32 is -10..);
   |                                  ^^^ cannot apply unary operator `-`
   |
   = note: unsigned values cannot be negated

error[E0600]: cannot apply unary operator `-` to type `char`
  --> $DIR/signed_ranges.rs:9:41
   |
LL | type SignedChar = pattern_type!(char is -'A'..);
   |                                         ^^^^ cannot apply unary operator `-`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0600`.
